--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,126 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root{
+  --mainBlue:#40ACF1;
+  --transparentBlue:rgba(64, 172, 241,0.7);
+  --mainWhite:#FFFFFFFF;
+  --mainBlack:#292F36;
+  --mainGrey:rgb(216, 214, 214);
+  --mainYellow:#e3b505;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body{
+  font-family: 'Roboto', sans-serif;
+  color: var(--mainBlack);
+  background: var(--mainWhite);
 }
+/* section title */
+.section-title--special{
+  background: var(--transparentBlue);
+  color: var(--mainWhite);
+  padding: 0.5rem 2rem;
+  clip-path: polygon(10% 0, 100% 0, 90% 100%,0 100%);
+}
+
+
+/* navbar */
+.navbar{
+  background: var(--mainWhite);
+}
+.navbar-icon{
+  font-size: 2rem;
+  color: var(--mainBlue);
+}
+.navbar-toogle{
+  outline-color: var(--mainBlue)!important;
+}
+.nav-link{
+  color: var(--mainBlack);
+  text-transform: capitalize;
+}
+.nav-link:hover{
+  color: var(--mainBlue);
+}
+.nav-icon{
+  font-size: 1.5rem;
+  color: var(--mainBlue);
+  text-decoration: none;
+  transition-property: color;
+  transition-duration: 2s;
+  transition-timing-function: linear;
+}
+.nav-icon:hover{
+  color:var(--mainBlue);
+}
+
+
+/* header */
+.header{
+  clip-path: polygon(0 0,100% 0,100% 95%,50% 100%,0 95%);
+  color: var(--mainWhite);
+}
+.height-max {
+  min-height: calc(100vh - 76px);
+  background-image:url("./assets/images/suv.jpg"); 
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  animation-name: zoom;
+  animation-duration: 20s;
+  animation-delay: 5s;
+  animation-iteration-count: infinite;
+}
+@keyframes zoom{
+  0%{
+    transform: scale(1);
+  }
+  50%{
+    transform: scale(1.2) translate(-5%)
+  }
+  100%{
+    transform: scale(1);
+  }
+}
+
+
+.title-heading{
+  background: rgba(0,0,0,0,4);
+  border-left: 0.3rem solid var(--mainBlue);
+}
+.title{
+  font-weight: 700;
+  font-size: 1.9rem;
+}
+@media screen and (min-width:768px){
+  .title{
+    font-size: 3rem;
+  }  
+}
+.title-icon{
+  color: var(--mainBlue);
+  text-decoration: none!important;
+}
+.title-icon:hover{
+  color: var(--mainBlue);
+  opacity: 0.6;
+}
+  
+
+/* skill */
+.skills-icon{
+  font-size:3rem;
+  color: var(v--mainYellow);
+  background: var(--mainGrey);
+}
+.skills-icon:hover{
+  color: var(--mainYellow);
+}
+.skills -underline{
+  width:4rem;
+  height: 0.3rem;
+  background: var(--mainBlue);
+  margin: 1rem auto;
+}
+
+
+
+/* REM values to target root element 1REM = 16px */ 
